<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#354373"
    tools:context=".CalculateAge">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/calculator"
           android:gravity="center_horizontal"
           android:textColor="@color/white"
           android:layout_marginTop="5dp"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="20dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="From : "
               android:textColor="@color/white"
               android:textSize="16sp"/>

           <TextView
               android:id="@+id/tvFrom"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="20/02/2020"
               android:layout_marginLeft="20sp"
               android:textColor="@color/white"
               android:textSize="20sp"/>

           <ImageView
               android:layout_width="25dp"
               android:layout_height="25dp"
               android:src="@drawable/edit"
               android:layout_marginLeft="20dp"/>


       </LinearLayout>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="20dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="     To : "
               android:textColor="@color/white"
               android:textSize="16sp"/>

           <TextView
               android:id="@+id/tvTo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="20/02/2020"
               android:layout_marginLeft="20sp"
               android:textColor="@color/white"
               android:textSize="20sp"/>

           <ImageView
               android:layout_width="25dp"
               android:layout_height="25dp"
               android:src="@drawable/edit"
               android:layout_marginLeft="20dp"/>


       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:layout_marginLeft="20dp"
           android:background="@color/white"
           android:orientation="vertical"
           android:layout_marginRight="20dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/watch"
                   android:padding="5dp"
                   android:layout_marginLeft="5dp"/>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:textSize="18sp"
                   android:text="@string/your_age"
                   android:layout_gravity="center"
                   android:gravity="center_vertical"
                   android:layout_marginLeft="5dp"/>

           </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/age"
               android:text="age"
               android:padding="10dp"
               android:textColor="@color/black"
               android:gravity="center_horizontal|center_vertical"
               android:textSize="26sp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:paddingBottom="20dp"
               android:paddingTop="20dp"
               android:background="#9CF4EFEF">

               <LinearLayout
                   android:gravity="center_horizontal"
                   android:layout_width="match_parent"
                   android:padding="2dp"
                   android:layout_marginTop="5dp"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/total_years"
                       android:gravity="center_horizontal"
                       android:layout_gravity="center_horizontal"
                       android:textSize="18sp"/>

                   <TextView
                       android:id="@+id/tvYearId"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:textSize="18sp"/>
               </LinearLayout>


               <LinearLayout
                   android:gravity="center_horizontal"
                   android:layout_width="match_parent"
                   android:layout_marginTop="5dp"
                   android:padding="2dp"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/total_months"
                       android:gravity="center_horizontal"
                       android:layout_gravity="center_horizontal"
                       android:textSize="18sp"/>

                   <TextView
                       android:id="@+id/tvMonthId"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:textSize="18sp"/>
               </LinearLayout>


               <LinearLayout
                   android:gravity="center_horizontal"
                   android:layout_width="match_parent"
                   android:layout_marginTop="5dp"
                   android:padding="2dp"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/total_days"
                       android:gravity="center_horizontal"
                       android:layout_gravity="center_horizontal"
                       android:textSize="18sp"/>

                   <TextView
                       android:id="@+id/tvDayId"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:textSize="18sp"/>
               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

       <Button
           android:id="@+id/btnSaveId"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:layout_marginRight="20dp"
           android:layout_marginTop="10dp"
           android:ems="5"
           android:textSize="20sp"
           android:backgroundTint="#1DE8E8"
           android:text="Save"/>


    </LinearLayout>

    </ScrollView>


</LinearLayout>